# knoxcraftmod

./: .gitignore  LICENSE.txt  README.md  build.gradle  gradle.properties  nbtprint.py
.githooks/: pre-commit
.github/workflows/: javadoc.yml  release.yml
docs/: index.html  styles.css
docs/blockly/: blockAliases.json  blockly.css  blockly.html  evaluator.js  index.html
docs/javadoc/: allpackages-index.html  element-list  member-search-index.js  overview-tree.html
docs/javadoc/edu/knox/knoxcraftmod/client/: Terp.html  TerpBlockType.html  package-summary.html  package-tree.html
docs/site/: index.html
javadoc/: allclasses-index.html  help-doc.html  index-all.html  index.html  package-search-index.js  search.html  type-search-index.js
javadoc/edu/knox/knoxcraftmod/client/: AbstractTerp.html  ParallelTerp.html  TerpUploader.html
pyclient/: README.md  pyproject.toml
pyclient-examples/: ParallelTunnel.py  Pyramid.py  PyramidExample.py
pyclient/knoxcraft/: __init__.py  blocktype.py  terp.py
pykc/: PyramidExample.py  terp.py
server-setup/: install-server.sh
src/main/java/edu/knox/knoxcraftmod/: BlockDumper.java  Config.java  DataGenerators.java  KnoxcraftConfig.java  KnoxcraftMod.java
src/main/java/tools/: BlockDumper.java  DumpBlocksCommand.java
src/main/resources/: pack.mcmeta
src/main/resources/assets/knoxcraftmod/lang/: en_us.json
tools/: .gitignore  blocklyclientmaker.py  blocks.py  install-server.sh  list.txt  nbtprint.py  process.py  pyclientmaker.py  requirements.txt  types-1.21.8.txt  types-1.21.txt
(+69 files in other folders)
